# openapi-common

./: .gitignore  .pre-commit-config.yaml  .valeignore  AUTHORS  AUTHORS.md  CHANGELOG.md  CNAME  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  Makefile  README.rst  index.html  index.md  pyproject.toml  requirements_docs.txt  requirements_style.txt  robots.txt  setup.cfg  sitemap.xml  sonar-project.properties  versions.json
.githooks/: pre-commit
.github/: dependabot.yml  labeler.yml
.github/workflows/: ci_cd.yml  codeql-analysis.yml  coverage.yml  dependabot_approve  dependabot_approve.yml  kerberos_container.yml  label.yaml  security_checks.yml
doc/: .vale.ini  Makefile  make.bat
doc/changelog.d/: 1029.dependencies.md  1046.added.md  1086.fixed.md  1087.added.md  1089.added.md  555.dependencies.md  563.changed.md  575.changed.md  576.changed.md  577.changed.md  578.changed.md  580.changed.md  581.changed.md  583.dependencies.md  587.changed.md  588.changed.md  634.maintenance.md  638.added.md  640.fixed.md  647.documentation.md  648.maintenance.md  651.fixed.md  657.documentation.md  658.maintenance.md  665.documentation.md  674.dependencies.md  685.fixed.md  696.documentation.md  697.maintenance.md  704.documentation.md  706.documentation.md  709.documentation.md  729.maintenance.md  751.added.md  758.maintenance.md  759.maintenance.md  761.maintenance.md  762.maintenance.md  763.maintenance.md  773.added.md  (+43 more)
doc/changelog.d/added/: oidc-upfront-configuration.md
doc/source/: changelog.rst  conf.py  contributing.rst  index.rst
doc/source/_static/: README.md
doc/source/_templates/: custom-class-template.rst  custom-module-template.rst  sidebar-nav-bs.html
doc/source/_templates/autosummary/: class.rst
doc/source/api/: api.rst  apiclient.rst  apiclientfactory.rst  exceptions.rst  granta.rst  index.rst  oidcsessionbuilder.rst  sessionconfiguration.rst
doc/source/getting_started/: index.rst
doc/source/planning/: httpx-migration.rst
doc/source/user_guide/: index.rst
doc/styles/Vocab/ANSYS/: accept.txt
requires/: generate_requirements.py  linux-kerberos_requirements.txt  linux_kerberos_requirements.txt  oidc_requirements.txt  package_requirements.txt
src/ansys/grantami/common/: __init__.py  _api_client.py  _exceptions.py  _oidc.py  _session.py  _util.py
src/ansys/openapi/common/: __init__.py  _api_client.py  _case_insensitive_dict.py  _codec_types.py  _deserializer.py  _exceptions.py  _logger.py  _model_registry.py  _oidc.py  _oidc_config.py  _retry_transport.py  _serializer.py  _session.py  _util.py
tests/: conftest.py  test_api_client.py  test_async_api_client.py  test_deserializer.py  test_exceptions.py  test_integration.py  test_integration_anonymous.py  test_integration_basic.py  test_integration_basic_incorrect_www_authenticate_header.py  test_integration_basic_no_www_authenticate_header.py  test_integration_basic_unadvertised.py  test_integration_negotiate.py  test_integration_negotiate_no_www_authenticate_header.py  test_missing_imports.py  test_model_methods.py  test_oidc.py  test_parse_authenticate.py  test_retry_transport.py  test_session_configuration.py  test_session_creation.py  test_unset.py  test_utils_misc.py
tests/contrib/: test_granta_integration.py
tests/files/: LICENSE  door.tiff  test.csv  test.json
tests/integration/: async_integration.py  common.py  configure_keytab.sh  fixture_apps.py  krb5.conf  server_utils.py  test_anonymous.py  test_basic.py  test_negotiate.py
tests/integration/anonymous/: test_anonymous.py
tests/integration/basic/: test_401_response_incorrect_header.py  test_401_response_missing_header.py  test_basic.py
tests/integration/kerberos/: Dockerfile  configure_keytab.sh  docker-compose.yml  init-script.sh  krb5.conf
tests/integration/negotiate/: test_401_response_missing_header.py  test_negotiate.py
tests/models/: __init__.py  example_base_model.py  example_enum.py  example_exception.py  example_int_enum.py  example_model.py  example_model_with_enum.py  model_base.py
version/: index.html
version/2.0/: .buildinfo  404.html  announcement.html  contributing.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
version/2.0/_sources/: contributing.rst.txt
version/2.0/_sources/api/: index.rst.txt
version/2.0/api/: announcement.html  index.html
version/2.0/api/_autosummary/: ansys.openapi.common.ApiClient.call_api.html  ansys.openapi.common.ApiClient.deserialize.html  ansys.openapi.common.ApiClient.html  ansys.openapi.common.ApiClient.parameters_to_tuples.html  ansys.openapi.common.ApiClient.prepare_post_parameters.html  ansys.openapi.common.ApiClient.request.html  ansys.openapi.common.ApiClient.select_header_accept.html  (+24 more)
version/2.1/: .buildinfo  404.html  announcement.html  contributing.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
version/2.1/_sources/: index.rst.txt
version/2.1/api/: index.html
version/2.2/: 404.html  contributing.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
version/2.2/_static/: search.json
version/2.2/api/: index.html
version/2.3/: 404.html  contributing.html  genindex.html  index.html  search.html  searchindex.js
version/2.3/_sources/: index.rst.txt
version/2.3/api/: index.html
version/2.3/getting_started/: index.html
version/2.3/user_guide/: index.html
version/2.4/: contributing.html  index.html  searchindex.js
version/2.4/api/: index.html
version/dev/: .buildinfo  404.html  changelog.html  contributing.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
version/dev/_sources/: index.rst.txt
version/dev/_static/: search.json
version/dev/api/: index.html
version/dev/getting_started/: index.html
version/dev/user_guide/: index.html
version/stable/: 404.html  changelog.html  contributing.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
version/stable/_static/: documentation_options.js  search.json
version/stable/api/: index.html
version/stable/getting_started/: index.html
version/stable/user_guide/: index.html
(+288 files in other folders)
