[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "ansys-openapi-common"
description = "Provides a helper to create sessions for use with Ansys OpenAPI clients."
version = "2.4.0.dev0"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"}
]
maintainers = [
    {name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"}
]
repository = "https://github.com/ansys/openapi-common"
documentation = "https://openapi.docs.pyansys.com"
readme = "README.rst"
keywords = [
  "Ansys",
  "OpenAPI"
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "requests>=2.26",
  "requests_gssapi>=1.3.0; sys_platform == 'win32'",
  "requests-ntlm>=1.1,<2.0",
  "pyparsing>=3.2,<3.4",
  "python-dateutil>=2.9",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "uvicorn",
    "fastapi",
    "pydantic",
    "requests-mock",
    "pytest-mock",
    "covertable",
    "mypy>=1.8.0",
    "types-requests",
    "types-python-dateutil",
    "requests_auth",
    "keyring",
    "sphinx-design>=0.6.0"
]
doc = [
    "ansys-sphinx-theme==1.6.4",
    "numpydoc==1.10.0",
    "sphinx==8.1.3",
    "sphinx-notfound-page==1.1.0",
    "sphinx-copybutton==0.5.2",
    "sphinx-design==0.6.1",
]
dev-linux = [
    "asgi_gssapi; sys_platform == 'linux'"
]

[project.optional-dependencies]
oidc = [
  "requests_auth>=8.0.0,<9.0.0",
  "keyring>=22,<26"
]
linux-kerberos = [
  "requests_gssapi>=1.3.0; sys_platform == 'linux'"
]

[tool.hatch.build.targets.wheel]
packages = ["src/ansys"]

[tool.ruff]
line-length = 100
exclude = ["doc/source"]

[tool.ruff.lint.per-file-ignores]
# Ignore `F401` (unused imports) in all `__init__.py` files.
"__init__.py" = ["F401"]

[tool.coverage.run]
omit = [
  "**/_base/*"
]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
filterwarnings = [
	"error",
]

[tool.pydocstyle]
convention = "numpy"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
show_error_codes = true
files = "src"
explicit_package_bases = true
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
namespace_packages = true

[tool.towncrier]
package = "ansys.openapi.common"
directory = "doc/changelog.d"
filename = "doc/source/changelog.rst"
start_string = ".. towncrier release notes start\n"
template = "doc/changelog.d/changelog_template.jinja"
title_format = "`{version} <https://github.com/ansys/openapi-common/releases/tag/v{version}>`_ - {project_date}"
issue_format = "`#{issue} <https://github.com/ansys/openapi-common/pull/{issue}>`_"

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "dependencies"
name = "Dependencies"
showcontent = true

[[tool.towncrier.type]]
directory = "miscellaneous"
name = "Miscellaneous"
showcontent = true

[[tool.towncrier.type]]
directory = "documentation"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "maintenance"
name = "Maintenance"
showcontent = true

[[tool.towncrier.type]]
directory = "test"
name = "Test"
showcontent = true
