[metadata]
name = ansys_openapi_common
version = attr: ansys.openapi.common.__version__
description = Provides a helper to create sessions for use with Ansys OpenAPI clients.
long_description = file: README.md, LICENSE
keywords = Ansys, OpenAPI
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Information Analysis
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: MacOS
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
package_dir =
    =src
packages = find_namespace:
install_requires =
    requests >= 2.26
    requests-negotiate-sspi >= 0.5.3; sys_platform == "win32"
    requests-ntlm >= 1.1.0
    pyparsing >= 3.0
    python-dateutil >= 2.6.1
    typing-extensions >= 3.7; python_version < '3.8'
tests_require =
    pytest
    uvicorn
    fastapi
    pydantic
    requests-mock
    pytest-mock
    covertable
    asgi_gssapi; sys_platform == "linux"
packages.find.exclude =
    .tests

[options.packages.find]
where = src

[options.extras_require]
oidc =
    requests_oauthlib >= 1.2
    keyring >= 22.0
linux-kerberos =
    requests-kerberos >= 13.0; sys_platform == "linux"
